# rust-login

./: .env  Cargo.toml
migrations/: 20230821192022_customers.sql  20230905044423_customers.down.sql  20230905044423_customers.up.sql
src/: main.rs
src/auth/: auth.rs  endpoints.rs  jwt.rs  mod.rs
src/auth/middlewares/: auth_middleware.rs  jwt_middleware.rs
src/config/: config.rs  custom_response.rs  error_response.rs  mod.rs  postgres.rs
src/customers/: customer.rs  endpoints.rs  mod.rs
