[package]
name = "login-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
pwhash = "1"
sqlx = { version = "0.6.2", features = ["runtime-async-std-native-tls", "postgres", "uuid", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
uuid = { version = "1.2.2", features = ["serde", "v4"] }
jsonwebtoken = "8.3.0"
chrono = { version = "0.4.26", features = ["serde"] }
futures-util = "0.3.28"
derive_more = "0.99.11"
